# csvsuite

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.csv_co.obligate.dependency.in  CMakeLists.txt  CMakeLists.txt.soci.obligate.dependency1.in  Dockerfile  Dockerfile.debian_bookworm  Dockerfile.debian_bullseye  Dockerfile.ubuntu_24_04  README.md  TODO
suite/: CMakeLists.txt  In2csv.cpp  Sql2csv.cpp  csvClean.cpp  csvCut.cpp  csvGrep.cpp  csvJoin.cpp  csvJson.cpp  csvLook.cpp  csvSort.cpp  csvSql.cpp  csvStack.cpp  csvStat.cpp  csvclean.cpp  csvcut.cpp  csvgrep.cpp  csvjoin.cpp  csvjson.cpp  csvlook.cpp  csvsort.cpp  csvsql.cpp  csvstack.cpp  csvstat.cpp  in2csv.cpp  sql2csv.cpp
suite/include/: cli-compare.h  cli-hash.h  cli-print.h  cli.h  col_types.h  encoding.h  local-sqlite3-dep.h  printer_concepts.h  reader-bridge-impl.hpp  rowset-query-impl.h
suite/include/csvjoin/: auxiliary_queue_filler.h  cache_values.h  can_compare.h  compare_composers.h  compare_function.h  cycle_cleanup.h  inner_join.h  left_right_join.h  outer_join.h  union_join.h
suite/include/in2csv/: converter_client.h  in2csv_csv.h  in2csv_dbf.h  in2csv_fixed.h  in2csv_geojson.h  in2csv_json.h  in2csv_ndjson.h  in2csv_xls.h  in2csv_xlsx.h
suite/include/sql_utils/: local-sqlite3-dep.h  rowset-query-impl.h
suite/src/csvsql/: csvsql_ocilib.cpp  csvsql_soci.cpp
suite/src/in2csv/: common.h  common_datetime_excel.h  common_excel.h  common_time_point.h  header_printer.h  in2csv_csv.cpp  in2csv_dbf.cpp  in2csv_fixed.cpp  in2csv_geojson.cpp  in2csv_json.cpp  in2csv_ndjson.cpp  in2csv_xls.cpp  in2csv_xlsx.cpp
suite/test/: CMakeLists.txt  In2csv_date_test.cpp  In2csv_fixed_format_test.cpp  In2csv_test.cpp  Sql2csv_test.cpp  common_args.h  csvClean_bad_skip_lines_test.cpp  csvClean_changes_character_encoding_test.cpp  csvClean_dry_run_test.cpp  csvClean_mac_newlines_test.cpp  csvClean_no_header_row_test.cpp  csvClean_optional_quote_characters_test.cpp  csvClean_removes_bom_test.cpp  csvClean_test_funcs.h  csvCut_test.cpp  csvGrep_test.cpp  csvJoin_test.cpp  csvJson_test.cpp  csvLook_test.cpp  csvSort_test.cpp  csvSql_test.cpp  csvStack_test.cpp  csvStat_test.cpp  csvclean_bad_skip_lines_test.cpp  csvclean_changes_character_encoding_test.cpp  csvclean_dry_run_test.cpp  csvclean_mac_newlines_test.cpp  csvclean_no_header_row_test.cpp  csvclean_optional_quote_characters_test.cpp  csvclean_removes_bom_test.cpp  csvclean_test_funcs.h  csvcut_test.cpp  csvgrep_test.cpp  csvjoin_test.cpp  csvjson_test.cpp  csvkit_core_test.cpp  csvlook_test.cpp  csvsort_test.cpp  csvsql_test.cpp  csvstack_test.cpp  (+14 more)
suite/test/examples/: bjarne.csv  dummy4.csv  piped_stdin  stdin_select  test_field_size_limit.csv  test_query_1252.sql  testdbf_converted.csv  testjson_nested_converted.csv  testxlsx_converted.csv  timedelta.csv
suite/test/scripts/Windows/: timecmd.bat
